# barebones

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  barebones.cmake  build_iso.sh  install_ubuntu_deps.sh  linker.ld  run.sh  vga_run.sh
ext/: CMakeLists.txt
grub/: grub.cfg
machines/32bit/: CMakeLists.txt  main.cpp
machines/chainloader/: chainloader.cpp  hotswap.c
machines/default/: CMakeLists.txt  main.cpp
machines/eastl/: CMakeLists.txt  main.cpp
machines/shared/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  c_abi.c  chainloader.cpp  hotswap.c  kernel_start.c  kprint.h  kprint.hpp  linker.ld  main.c  main.cpp  main.h  main.hpp  multiboot.h  print.h  serial1.c  start.asm  test.cpp
src/crt/: c_abi.c  c_stubs.c  cxxabi.cpp  heap.c  malloc.c  ubsan.c  udiv.c
src/hw/: serial.h  serial1.c
src/kernel/: dylib.hpp  elf.cpp  elf.hpp  init_libc.c  kernel_start.c  panic.cpp  start.asm  start32.c  start64.asm  tls.cpp  tls.h  tls.hpp
src/prnt/: mini-printf.c  print.c
tools/: Makefile  chainloader
